--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact-abhindas</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="top-images">
-            <a href="home.html"><img src="./images/fromspace-logo.png" alt="" class="fromspace-logo"></a>
+            <a href="index.html"><img src="./images/fromspace-logo.png" alt="" class="fromspace-logo"></a>
          
      
         </div>
