--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
          
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
             
             <a href="contact.html">Contact</a>
