added some responsiveness

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>    
     </div>
 
-    <!-- <div class="name-svg">
+    <div class="name-svg">
         <div>
             <img src="./images/Abindas.svg" alt="" class="abhi-svg">
         </div>
            
 
-    </div> -->
+    </div>
 
     <div class="intro">
         
