--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 
         <div class="div-1 hidden" id="services">
             <h1>We Built Your Digital <span style="color: red;">B</span>rand</h1>
-            <p>We combine strategy, design and growth into our brand building process so your ​brand cuts through the noise, delivers a clear message and gets results.</p>
-            <hr>
+            <p>We combine strategy, design and growth into our brand building process so your ​brand cuts through the noise, delivers a clear message and gets results.
+                <hr>
+            </p>
+            
         </div>
     
     <div class="hidden ">
